2010-9-24 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-07
    add new methods for sim object, coef, fixef, ranef and sigm.hat

2010-9-24 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-06
    * R/bayesglm: fix a bug when a model of one predictor with no intercept is fitted
    * man/several: CRAN no longer alows genericFunction docType

2010-6-28 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-05
    * R/extractDIC: add s3 methods for extractDIC and extractAIC for the mer class
    * Rd/extractDIC

2010-1-21 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-04
    * R/standardize: add polr method
    * Rd/standardize: change the example code to make M1 and M2 equivalent. 

2010-1-15 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-03
    * R/balanceplot: fix a bug in balance(), take out the intercept

2010-1-11 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-02
    * R/bayesglm: new bayesglm.fit (written by Daniel Lee)


2010-1-8 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.3-01.
    * R/bayesglm: a bug in x.matrix augmentation


2009-12-30 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-13.
    * R/bayesglm: smarter use of x matrix to save memory usage


2009-12-12 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-12.
    * R/simmer: use of sparse matrix in sim.mer

2009-12-08 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-11; add abind pacakge dependencyR 
    * R/simmer: new sim functions for "mer" class

2009-11-22 Yu-Sung Su     <ys463@columbia.edu>  
    * DESCRIPTION (Version, Date): 1.2-10.
    * NAMESPACE: export logit

2009-4-29 Yu-Sung Su     <ys463@columbia.edu>  
    * R/display: fix format inconsistency in sprintf (fround)
